--- a/about-us.html
+++ b/about-us.html
@@ -6363,10 +6363,11 @@
                 class="logo-light"/> </a></div>
         <div class="pxl-item--conent">
             <div class="pxl-item--close pxl-close"></div>
-            <form role="search" method="get" action=""><input type="text" required
-                                                                                                placeholder="type your search words..."
-                                                                                                name="s"
-                                                                                                class="search-field"/>
+            <form role="search" method="get" action="">
+                <input type="text" required
+                       placeholder="type your search words..."
+                       name="s"
+                       class="search-field"/>
                 <button type="submit" class="search-submit rm-style-default">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <g clip-path="url(#clip0_243_485)">
